<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    tools:context="com.arctouch.codechallenge.ui.MovieDetailActivity"
    tools:ignore="MergeRootFrame">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/movie_poster_large"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder"
                tools:ignore="ContentDescription" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/movie_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible"
            tools:context="com.example.isaque.movieslist.view.MovieDetailFragment">

            <TextView
                android:id="@+id/movie_details_not_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_centerInParent="true"
                android:layout_centerVertical="false"
                android:text="@string/movie_details_not_found"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/details_body"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">


                <ImageView
                    android:id="@+id/movie_poster_mini"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/placeholder" />

                <TextView
                    android:id="@+id/title_details"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:text="@string/title_movie_details"
                    android:textColor="@android:color/holo_orange_light"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/name_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:id="@+id/title_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:text="@string/name"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movieName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        tools:text="Nome do Filme" />
                </LinearLayout>

                <TextView
                    android:id="@+id/movieID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/release_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:id="@+id/title_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:text="@string/release_date"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        tools:text="1964-06-01" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/genres_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:text="@string/generos"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        tools:text="Ação, Comédia" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rating_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="24dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:paddingBottom="5dp"
                        android:paddingTop="5dp"
                        android:src="@drawable/ic_star_black_48px" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="16dp"
                        android:paddingStart="5dp"
                        android:text="@string/rating"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        tools:text="7.0" />
                </LinearLayout>

                <TextView
                    android:id="@+id/title_sinopse"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="16dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="20dp"
                    android:text="@string/title_overview"
                    android:textColor="@android:color/holo_orange_light"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/movie_sinopse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:textColor="@android:color/white"
                    tools:text="aljkshdalkjshdlakwjhd lkjwahd lkjwahd lkwjah dlkawjh dkawjh d" />

                <TextView
                    android:id="@+id/title_links"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:paddingTop="20dp"
                    android:text="@string/title_links"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/imdb_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/imdb"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/imdb_link"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:textColor="@android:color/white"
                        tools:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/homepage_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/website"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/homepage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:textColor="@android:color/white"
                        tools:text="TextView" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

            </LinearLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true">

        <ImageView
            android:id="@+id/movie_poster_fullscreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@android:color/black"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@drawable/placeholder"
            tools:ignore="ContentDescription" />
    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>
