<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.arctouch.codechallenge.ui.HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="-16dp"
                android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                    <android.support.v7.widget.SearchView
                        android:id="@+id/search_bar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.AppBarLayout>

            <TextView
                android:id="@+id/movies_list_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="5dp"
                android:text="Popular Movies"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:itemCount="10"
                tools:listitem="@layout/movie_item" />

        </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        tools:visibility="gone" />

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="false"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:fab_addButtonColorNormal="@color/colorPrimaryDark"
        app:fab_addButtonColorPressed="@color/colorPrimary"
        app:fab_addButtonPlusIconColor="@android:color/background_light"
        app:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_action_playing_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@android:color/holo_red_dark"
            app:fab_colorPressed="@android:color/holo_red_light"
            app:fab_icon="@drawable/ic_local_movies_black_48px"
            app:fab_size="mini"
            app:fab_title="@string/movie_title_now_playing" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_action_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@android:color/holo_green_dark"
            app:fab_colorPressed="@android:color/holo_green_light"
            app:fab_icon="@drawable/ic_new_releases_black_48px"
            app:fab_size="mini"
            app:fab_title="@string/movie_title_upcoming" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_action_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="?android:attr/colorMultiSelectHighlight"
            app:fab_colorPressed="?android:attr/colorPressedHighlight"
            app:fab_icon="@drawable/ic_star_black_48px"
            app:fab_size="mini"
            app:fab_title="@string/movie_title_popular" />

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</android.support.design.widget.CoordinatorLayout>
